# PROGC

OP_syst/: CMakeLists.txt  exam1.c  exercises_try  output.txt  practicalfork  producer_consumer  reader_writer  semaphore1  semaphore_prod_cons
OP_syst/Basics/: Pointers  borrador  borrador.c  main
OP_syst/FIFOs/: FIFO1  FIFO1.c  FIFOcommunication  FIFOcommunication.c  FIFOcommunication2  FIFOcommunication2.c  exitstat  exitstat.c  filesearch  filesearch.c
OP_syst/executables/: Communicating  arrayVSpointer  arraypipe  exam1  forkvisual  parentchild  signalcomm  stout  tipspointers  voidpointers
OP_syst/execute/: Commands  Commands.c  exec  exec.c  stout  stout.c
OP_syst/exercises/: exercises_try.c
OP_syst/exercisesC/: ex1  ex1.c  ex2  ex2.c  ex3  ex3.c  ex4  ex4.c  ex5  ex5.c  ex6  ex6.c  ex7  ex7.c  ex8  ex8.c  t3t4g82_2023.c
OP_syst/forking/: Multiple forks.c  forkvisual.c  main.c  waitprocess.c
OP_syst/pipes/: Pipestwoway.c  Pipestwoway2.c  arraypipe.cpp  communicating.c  parentchild.c  practicalfork.c
OP_syst/pointersmemory/: arrayVSpointer.c  dereferencing.c  differences.c  memmoveVSmemcpy.c  memorymanipulation.c  memoryprint.c  operpointer.c  sizeofop.c  tipspointers.c  voidpointers.c
OP_syst/qeues/: qeue.c
OP_syst/semaphores and mutex/: mutex_exam.c  producer_consumer.c  reader_writer.c  semaphore1.c  semaphore_prod_cons.c
OP_syst/signaling/: BackForegroundp  BackForegroundp.c  executable  executable.c  sigaction  sigaction.c  sigalarm2  sigalarm2.c  signalcomm.c  signals  signals.c  stopcont  stopcont.c  stopcontwo
OP_syst/threads/: mutex  (+14 more)
(+3389 files in other folders)
